--- a/public/css/markdown.css
+++ b/public/css/markdown.css
@@ -276,9 +276,9 @@
 .markdown-body h4,
 .markdown-body h5,
 .markdown-body h6 {
-  margin-top: 1em;
+  margin-top: 0.4em;
   margin-bottom: 16px;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.4;
 }
 
@@ -312,8 +312,8 @@
 }
 
 .markdown-body h1 {
-  padding-bottom: 0.3em;
-  font-size: 2.25em;
+  padding-bottom: 0.2em;
+  font-size: 2em;
   line-height: 1.2;
   border-bottom: 1px solid #aaa;
 }
