切换文章后 跳转到顶部

--- a/public/css/markdown.css
+++ b/public/css/markdown.css
@@ -32,7 +32,6 @@
 }
 
 .markdown-body h1 {
-  font-size: 2em;
   margin: 0.67em 0;
 }
 
@@ -315,7 +314,7 @@
   padding-bottom: 0.2em;
   font-size: 2em;
   line-height: 1.2;
-  border-bottom: 1px solid #aaa;
+  border-bottom: 2px solid #aaaaaa30;
 }
 
 .markdown-body h1 .anchor {
