--- a/public/css/markdown.css
+++ b/public/css/markdown.css
@@ -322,9 +322,8 @@
 
 .markdown-body h2 {
   padding-bottom: 0.3em;
-  font-size: 1.75em;
-  line-height: 1.225;
-  border-bottom: 1px solid #aaa;
+  font-size: 1.5em;
+  /* line-height: 1.225; */
 }
 
 .markdown-body h2 .anchor {
@@ -332,8 +331,8 @@
 }
 
 .markdown-body h3 {
-  font-size: 1.5em;
-  line-height: 1.43;
+  font-size: 1.25em;
+  /* line-height: 1.43; */
 }
 
 .markdown-body h3 .anchor {
